--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@truffle/hdwallet-provider": "^2.1.15",
+    "big-integer": "^1.6.52",
     "ganache": "^7.9.2",
     "hardhat-deploy-ethers": "^0.4.2",
     "hardhat-gas-reporter": "^2.1.1",
@@ -52,6 +53,6 @@
     "hardhat": "^2.13.0",
     "solc": "^0.8.20",
     "tailwindcss": "^3.4.3",
-    "web3": "^4.8.0"
+    "web3": "^4.9.0"
   }
 }
